--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+/*to fix that the navbar does not cover other content when fixed-top */
+body::before {
+    display: block;
+    content: '';
+    height: 60px;
+}
+
+/*to give the map and width and height*/
+#map {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
 /*this media query will execute as long as the min-width is over 768px*/
 @media(min-width: 768px) { 
     .news-input {
