--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img {
 /*NAVBAR*/
 .top-bar {
     background-color: #ff4d29;
-    width: 100%;
+    width: 600px;
     position: fixed;
     top: 0;
     left: 0;
