Update style.css adjust width of topnav

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img {
 /*NAVBAR*/
 .top-bar {
     background-color: #ff4d29;
-    width: 600px;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
